set(app "Receiver")
add_executable(${app} main.cpp)
find_package(Protobuf REQUIRED)
target_compile_features(${app} PRIVATE cxx_std_17)
target_include_directories(${app} PRIVATE ${CMAKE_SOURCE_DIR}/include $ENV{HOME}/etc/include)
target_link_directories(${app} PRIVATE $ENV{HOME}/etc/lib)
target_link_libraries(${app} PRIVATE arrow redis++ hiredis pthread jsoncpp ${Protobuf_LIBRARIES} iv_msg)
target_link_libraries(${app} PRIVATE spdlog)
