set(app "LevelUploader")
# set(ownlibdir "/home/BLUEFINTRADING/jian_shao/code")
add_executable(${app} main.cpp)
target_compile_features(${app} PRIVATE cxx_std_17)
target_include_directories(${app} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(${app} PRIVATE mysqlcppconn redis++ hiredis pthread jsoncpp)
target_link_libraries(${app} PRIVATE spdlog)